[project]
name = "bt4mld"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.25.0",
    "dishka>=1.8.0",
    "msgspec>=0.20.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.47",
    "uuid-utils>=0.14.1",
]
